----------------------------------------------
                 TeamTalk
----------------------------------------------

Version 5.22, unreleased
Default Qt Client
- Updated Qt to 6.9.3 on Windows and macOS
Android Client
-
iOS Client
-
Server
-

Version 5.21, 2025/09/29
Default Qt Client
- Fixed Windows freeze issue closing Preferences dialog
- Windows changed to Qt 6.9.2
Server
- TeamTalk Pro server requires BearWare.dk WebLogin to start
- Fixed crash issue when sharing large desktop windows

Version 5.20.1, 2025/09/15
Android Client
- Fixed restoring of microphone gain to value from preferences at application start
- Fixed microphone gain to not drop to 0 when slider is at 0%

Version 5.20, 2025/09/14
Default Qt Client
- TeamTalk5.ini no longer stores values that have the same value as default
- Reintroduce option to speak tree item using TTS on macOS due to Qt issues
- Fixed check state of server log events on macOS not being visible
- Fixed global status message set to: "general_/statusmsg"
- Fixed answering "No" to quit application causing server disconnect
- Windows updated to Qt 6.10.0 beta4
- macOS changed to Qt 6.9.2 (still issues with VoiceOver)
- Minimum supported macOS version is now 12 (Monterey)
Android Client
- Fixed UI overlap on Android 15 and above
- Minimum supported Android version is now 5.0 (Lollipop)
Server
- Now logs changes to who is allowed to transmit
- Now logs when new streams (voice, video, etc.) are started

Version 5.19, 2025/08/05
Default Qt Client
- Ctrl+Shift+C to copy only message content in chat list
- Ctrl+Alt+Shift+C to copy all chat list history
- Ctrl+Shift+R to generate tt:// URL for current channel
- Bitrate for OPUS is limited to 6-510 in Channel dialog
- Status message shown in "Preferences" dialog
- Ability to define status message for each server
- Option to ask confirmation on exit